fix spacing; adjusted certificate page

--- a/src/pages/styles/certificates.css
+++ b/src/pages/styles/certificates.css
@@ -24,6 +24,7 @@
 .certificates-container {
 	display: flex;
 	flex-direction: column;
+	width: 80%;
 }
 
 .certificates-wrapper {
